schema/testdata/validation_create_inputs_not_mutable_fields/schema.keel
model Person {
    fields {
        name Text
        passport Text @unique
        employer Company
    }

    actions {
        create createPerson() with (id, employer.id, passport, name, createdAt, updatedAt) 

        create createPersonWithCompany() with (name, passport, employer.name, employer.createdAt) 
    }
}

model Company {
    fields {
        name Text
    }
}