schema/testdata/errors/update_inputs_not_mutable_fields.keel
model Person {
    fields {
        name Text
        passport Text @unique
        employer Company
    }

    actions {
        //expect-error:54:63:ActionInputError:Cannot set the field 'createdAt' as it is a built-in field and can only be mutated internally
        //expect-error:65:74:ActionInputError:Cannot set the field 'updatedAt' as it is a built-in field and can only be mutated internally
        update updatePost1(passport) with (id, name, createdAt, updatedAt)
        // This is valid
        update updatePost2(id, createdAt, updatedAt) with (name)
        // This is valid
        update updatePost3(id, employer.createdAt, employer.updatedAt) with (
            name
        )
    }
}

model Company {
    fields {
        name Text
    }
}
